2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* thread.h (hurd_myself): Assume UTCB->TID is set correctly.

2008-12-18  Neal H. Walfield  <neal@gnu.org>

	* RPC: Move to ../libviengoos.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* exceptions.h: Merge contents of this file...
	* thread.h: ... into this one.  Update users.
	* headers.m4: Don't link hurd/exceptions.h.
	* Makefile.am (includehurd_HEADERS): Remove exceptions.h.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* rmutex.h (__need_vg_thread_id_t): Don't include <l4/thread.h>.
	Define __need_vg_thread_id_t and include <viengoos/thread.h>.
	(struct ss_rmutex): Change owner to a vg_thread_id_t.
	(SS_RMUTEX_INIT): Use vg_niltid instead of vg_niltid.
	(ss_rmutex_lock): Use hurd_myself instead of l4_myself.  Use
	vg_niltid instead of l4_nilthread.
	(ss_rmutex_unlock): Likewise.
	(ss_rmutex_trylock): Likewise.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* exceptions.h: Don't include <viengoos/cap.h> or <l4/space.h>.
	Include <viengoos/addr.h>.
	(ACTIVATION_fault, activation_method_id_string)
	(struct activation_fault_info, ACTIVATION_FAULT_INFO_FMT)
	(ACTIVATION_FAULT_INFO_PRINTF, fault): Move from here...
	* ../libviengoos/viengoos/thread.h: ... to here.
	
2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* thread.h: Include <hurd/exceptions.h>.
	(struct hurd_utcb): Add field tid.
	(hurd_myself): New function.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* math.h: Move to ../libviengoos/viengoos.  Update users.
	* bits/ia32/math.h: Remove file.
	* headers.m4: Don't link hurd/math.h or hurd/bits/math.h.

2008-12-17  Neal H. Walfield  <neal@gnu.org>

	* activity.h: Move to ../libviengoos/viengoos.  Update references.
	* addr-trans.h: Likewise.
	* addr.h: Likewise.
	* cap.h: Likewise.
	* folio.h: Likewise.
	* futex.h: Likewise.
	* ipc.h: Likewise.
	* message.h: Likewise.
	* messenger.h: Likewise.
	* rpc.h: Likewise.
	* thread.h: Move viengoos specific bits...